Fixed AppInstance loading z-index.

--- a/modules/gui/frontend/src/app/home/body/apps/appInstance.module.css
+++ b/modules/gui/frontend/src/app/home/body/apps/appInstance.module.css
@@ -39,7 +39,6 @@
     bottom: 0;
     left: 20%;
     right: 20%;
-    z-index: 2; /* make sure busy spinner is above the overlay */
 }
 
 .loading::before {
